<resources>
    <string name="app_name">BootcampApp2</string>
    <string name="frame_layout">FrameLayout</string>
    <string name="linear_layout">LinearLayout</string>
    <string name="constraint_layout">ConstraintLayout</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="constraint_layout_project">ConstraintLayout Project</string>
    <string name="back">back</string>
    <string name="android">Android</string>
    <string name="_285">285</string>
    <string name="posts">Posts</string>
    <string name="_965k">965K</string>
    <string name="followers">Followers</string>
    <string name="_21">21</string>
    <string name="following">Following</string>
</resources>

