<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/space_16">

   <androidx.appcompat.widget.AppCompatImageView
       android:id="@+id/imageViewProfile"
       android:layout_width="75dp"
       android:layout_height="75dp"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:srcCompat="@drawable/profile_pic"/>

   <com.google.android.material.textview.MaterialTextView
       android:id="@+id/textViewUsername"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="8dp"
       android:text="@string/android"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="@id/imageViewProfile"
       app:layout_constraintTop_toBottomOf="@id/imageViewProfile"/>

   <com.google.android.material.textview.MaterialTextView
       android:id="@+id/textViewPostCount"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/_285"
       app:layout_constraintBottom_toTopOf="@id/textViewPostTitle"
       app:layout_constraintEnd_toStartOf="@id/textViewFollowersCount"
       app:layout_constraintStart_toEndOf="@id/imageViewProfile"
       app:layout_constraintTop_toTopOf="@id/imageViewProfile"
       app:layout_constraintVertical_chainStyle="packed"/>

   <com.google.android.material.textview.MaterialTextView
       android:id="@+id/textViewPostTitle"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="2dp"
       android:text="@string/posts"
       app:layout_constraintBottom_toBottomOf="@id/imageViewProfile"
       app:layout_constraintEnd_toEndOf="@id/textViewPostCount"
       app:layout_constraintStart_toStartOf="@id/textViewPostCount"
       app:layout_constraintTop_toBottomOf="@id/textViewPostCount"/>

   <com.google.android.material.textview.MaterialTextView
       android:id="@+id/textViewFollowersCount"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/_965k"
       app:layout_constraintBottom_toTopOf="@id/textViewFollowersTitle"
       app:layout_constraintEnd_toStartOf="@id/textViewFollowingCount"
       app:layout_constraintStart_toEndOf="@id/textViewPostCount"
       app:layout_constraintTop_toTopOf="@id/imageViewProfile"
       app:layout_constraintVertical_chainStyle="packed"/>

   <com.google.android.material.textview.MaterialTextView
       android:id="@+id/textViewFollowersTitle"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="2dp"
       android:text="@string/followers"
       app:layout_constraintBottom_toBottomOf="@id/imageViewProfile"
       app:layout_constraintEnd_toEndOf="@id/textViewFollowersCount"
       app:layout_constraintStart_toStartOf="@id/textViewFollowersCount"
       app:layout_constraintTop_toBottomOf="@id/textViewFollowersCount"/>

   <com.google.android.material.textview.MaterialTextView
       android:id="@+id/textViewFollowingCount"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/_21"
       app:layout_constraintBottom_toTopOf="@id/textViewFollowingTitle"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toEndOf="@id/textViewFollowersCount"
       app:layout_constraintTop_toTopOf="@id/imageViewProfile"
       app:layout_constraintVertical_chainStyle="packed"/>

   <com.google.android.material.textview.MaterialTextView
       android:id="@+id/textViewFollowingTitle"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="2dp"
       android:text="@string/following"
       app:layout_constraintBottom_toBottomOf="@id/imageViewProfile"
       app:layout_constraintEnd_toEndOf="@id/textViewFollowingCount"
       app:layout_constraintStart_toStartOf="@id/textViewFollowingCount"
       app:layout_constraintTop_toBottomOf="@id/textViewFollowingCount"/>

   <com.google.android.material.button.MaterialButton
       android:id="@+id/buttonBack"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/back"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toBottomOf="@id/textViewUsername"/>


</androidx.constraintlayout.widget.ConstraintLayout>




